# checkOwners

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  README.md  action.yml  pyproject.toml
.github/: CODEOWNERS  checkowners.yml
.github/workflows/: checkowners-example.yml  ci.yml  publish.yml
.instructions/: CLAUDE.md  PRODUCT.md  idea.md  plan.md
checkowners/: __init__.py  analyze.py  balance.py  busfactor.py  cli.py  config.py  decay.py  drift.py  expertise.py  generate.py  github.py  graph.py  models.py  notify.py  onboard.py  state.py  topology.py  trends.py  validate.py
docs/: CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  FAQ.md  USAGE.md
tests/: test_analyze.py  test_balance.py  test_busfactor.py  test_cli.py  test_config.py  test_decay.py  test_drift.py  test_expertise.py  test_generate.py  test_github.py  test_graph.py  test_notify.py  test_onboard.py  test_state.py  test_topology.py  test_trends.py  test_validate.py
